--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Blog-Application
+
+#db configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/blog-application
+spring.datasource.username=root
+spring.datasource.password=Admin@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# for create an entity only once time
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
